BUG 35114255 - [34625628->14.1.1.0.13-CE] ENH: Stream query results to client by partition to avoid hitting 2GB buffer limit (v14.1.1.0 -> ce/v14.1.1.0 @ 98748)
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v14.1.1.0/": change = 98756]